moved to "a-la-maven" package distribution